# ros2-starter-for-yaskawa-robots

./: README.md  motoros2_config.yaml
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: client_traj_action.cpp  disable_client.cpp  enable_client.cpp  joint_state_subscriber.cpp  move_gp8_target.cpp  server_traj_action.cpp  subscriber_member_function.cpp
src/dev_opencv_py/: package.xml  setup.cfg  setup.py
src/dev_opencv_py/dev_opencv_py/: cam_pub.py  cam_sub.py
src/gp8_interface/: package.xml  setup.cfg  setup.py
src/gp8_interface/gp8_interface/: gp8_node.py  gp8_stream.py  gp8_stream_vision.py
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/src/: hello_obstacle.cpp  joint_hello_moveit.cpp  sim_hello_moveit.cpp
src/motoXY/moto_description/: CHANGELOG.rst  CMakeLists.txt  README.md  dim_color_ref_gp8.xacro.urdf  package.xml
src/motoXY/moto_description/urdf/: moto.urdf
src/motoXY/moto_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/motoXY/moto_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moto.ros2_control.xacro  moto.srdf  moto.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/motoXY/moto_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  sim_start.launch.py  spawn_controllers.launch.py  start.launch.py  static_virtual_joint_tfs.launch.py  test.launch.py  warehouse_db.launch.py  xy_start.launch.py  yaskawa_hw.launch.py
src/motoman_resources/: CMakeLists.txt  package.xml
