<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gp8_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="markus@todo.todo">markus</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>motoros2_interfaces</depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>std_msgs</depend>
  <depend>opencv-python</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
