<?xml version="1.0"?>
<package format="3">
  <name>moveit_resources_moto_description</name>
  <version>1.0.0</version>
  <description>moto Resources used for MoveIt testing</description>

  <author email="markus@markus.eu">Markus Buchholz</author>

  <maintainer email="markus@markus.eu">Markus Buchholz</maintainer>

  <license>BSD</license>
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
